optimize memory allocations for even faster processing